# flecsi

./: CMakeLists.txt  README.md
2.0/: ci
branches/2.1/spack/: packages.yaml
branches/devel/spack/: config.yaml  packages.yaml
branches/develop/spack/: packages.yaml
branches/util/spack/: packages.yaml
cmake/: image.cmake  version.cmake
devel/: ci  flecsi  tutorial
devel/spack/: packages.yaml
docker/os/: centos-8  clearlinux  fedora-30  fedora-32  fedora-33  fedora-34  rockylinux  ubuntu-20.04
docker/targets/: ci  flecsi  tutorial  ucx
docker/util/: ci
os/: centos-8  clearlinux  fedora-30  fedora-32  fedora-33  ubuntu-20.04
util/: ci
util/spack/: packages.yaml
